Assignments/Assignment2/target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "'+'", "'-'", "'*'", "'\\'", "'%'", 
                     "'!'", "'&&'", "'||'", "'='", "'<='", "'>='", "'!='", 
                     "'=='", "'<'", "'>'", "'+.'", "'-.'", "'*.'", "'\\.'", 
                     "'<=.'", "'>=.'", "'=\\='", "'=.'", "'<.'", "'>.'", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "':'", "'Function'", "'Body'", "'End'", 
                     "'Parameter'", "'True'", "'False'", "'If'", "'Then'", 
                     "'Else'", "'ElseIf'", "'EndIf'", "'EndDo'", "'EndBody'", 
                     "'For'", "'While'", "'Do'", "'To'", "'EndFor'", "'EndWhile'", 
                     "'Return'", "'Break'", "'Continue'", "'int'", "'string'", 
                     "'float'", "'boolean'", "'Var'", "'of'" ]

    symbolicNames = [ "<INVALID>", "INTEGER_LITERAL", "FLOAT_LITERAL", "BOOLEAN_LITERAL", 
                      "STRING_LITERAL", "DOT", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "ASSIGN", "LTE", "GTE", 
                      "NEQ", "EQ", "LT", "GT", "FADD", "FSUB", "FMUL", "FDIV", 
                      "FLTE", "FGTE", "FNEQ", "FEQ", "FLT", "FGT", "WS", 
                      "LP", "RP", "LCB", "RCB", "LSB", "RSB", "SEMI", "COMMA", 
                      "COLON", "FUNCTION", "BODY", "END", "PARAMETER", "TRUE", 
                      "FALSE", "IF", "THEN", "ELSE", "ELSEIF", "ENDIF", 
                      "ENDDO", "ENDBODY", "FOR", "WHILE", "DO", "TO", "ENDFOR", 
                      "ENDWHILE", "RETURN", "BREAK", "CONTINUE", "INTEGER", 
                      "STRING", "FLOAT", "BOOLEAN", "VAR", "OF", "COMMENT_LITERAL", 
                      "ID", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_global_vardecl = 1
    RULE_vardecl_list = 2
    RULE_var_decl = 3
    RULE_para_decllist = 4
    RULE_para_decl = 5
    RULE_func_decl = 6
    RULE_stmtList = 7
    RULE_stmt = 8
    RULE_ifStmt = 9
    RULE_elifStmt = 10
    RULE_elseStmt = 11
    RULE_whileStmt = 12
    RULE_doWhileStmt = 13
    RULE_forStmt = 14
    RULE_callStmt = 15
    RULE_breakStmt = 16
    RULE_continueStmt = 17
    RULE_returnStmt = 18
    RULE_argulist = 19
    RULE_funcCall = 20
    RULE_assignStmt = 21
    RULE_lhs = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_index_exp = 29
    RULE_exp7 = 30
    RULE_literal = 31
    RULE_operands = 32
    RULE_array_literal = 33
    RULE_number = 34
    RULE_primitive_types = 35

    ruleNames =  [ "program", "global_vardecl", "vardecl_list", "var_decl", 
                   "para_decllist", "para_decl", "func_decl", "stmtList", 
                   "stmt", "ifStmt", "elifStmt", "elseStmt", "whileStmt", 
                   "doWhileStmt", "forStmt", "callStmt", "breakStmt", "continueStmt", 
                   "returnStmt", "argulist", "funcCall", "assignStmt", "lhs", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "index_exp", 
                   "exp7", "literal", "operands", "array_literal", "number", 
                   "primitive_types" ]

    EOF = Token.EOF
    INTEGER_LITERAL=1
    FLOAT_LITERAL=2
    BOOLEAN_LITERAL=3
    STRING_LITERAL=4
    DOT=5
    ADD=6
    SUB=7
    MUL=8
    DIV=9
    MOD=10
    NOT=11
    AND=12
    OR=13
    ASSIGN=14
    LTE=15
    GTE=16
    NEQ=17
    EQ=18
    LT=19
    GT=20
    FADD=21
    FSUB=22
    FMUL=23
    FDIV=24
    FLTE=25
    FGTE=26
    FNEQ=27
    FEQ=28
    FLT=29
    FGT=30
    WS=31
    LP=32
    RP=33
    LCB=34
    RCB=35
    LSB=36
    RSB=37
    SEMI=38
    COMMA=39
    COLON=40
    FUNCTION=41
    BODY=42
    END=43
    PARAMETER=44
    TRUE=45
    FALSE=46
    IF=47
    THEN=48
    ELSE=49
    ELSEIF=50
    ENDIF=51
    ENDDO=52
    ENDBODY=53
    FOR=54
    WHILE=55
    DO=56
    TO=57
    ENDFOR=58
    ENDWHILE=59
    RETURN=60
    BREAK=61
    CONTINUE=62
    INTEGER=63
    STRING=64
    FLOAT=65
    BOOLEAN=66
    VAR=67
    OF=68
    COMMENT_LITERAL=69
    ID=70
    UNCLOSE_STRING=71
    ILLEGAL_ESCAPE=72
    UNTERMINATED_COMMENT=73
    ERROR_CHAR=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def global_vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Global_vardeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.Global_vardeclContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 72
                self.global_vardecl()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 78
                self.func_decl()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_vardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def vardecl_list(self):
            return self.getTypedRuleContext(BKITParser.Vardecl_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_global_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_vardecl" ):
                return visitor.visitGlobal_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def global_vardecl(self):

        localctx = BKITParser.Global_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(BKITParser.VAR)
            self.state = 87
            self.match(BKITParser.COLON)
            self.state = 88
            self.vardecl_list()
            self.state = 89
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_vardecl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_list" ):
                return visitor.visitVardecl_list(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_list(self):

        localctx = BKITParser.Vardecl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.var_decl()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 92
                self.match(BKITParser.COMMA)
                self.state = 93
                self.var_decl()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTEGER_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER_LITERAL)
            else:
                return self.getToken(BKITParser.INTEGER_LITERAL, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(BKITParser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 100
                self.match(BKITParser.LSB)
                self.state = 101
                self.match(BKITParser.INTEGER_LITERAL)
                self.state = 102
                self.match(BKITParser.RSB)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 108
                self.match(BKITParser.ASSIGN)
                self.state = 109
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_decllistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Para_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Para_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_para_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_decllist" ):
                return visitor.visitPara_decllist(self)
            else:
                return visitor.visitChildren(self)




    def para_decllist(self):

        localctx = BKITParser.Para_decllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_para_decllist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.para_decl()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 113
                self.match(BKITParser.COMMA)
                self.state = 114
                self.para_decl()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTEGER_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER_LITERAL)
            else:
                return self.getToken(BKITParser.INTEGER_LITERAL, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_para_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_decl" ):
                return visitor.visitPara_decl(self)
            else:
                return visitor.visitChildren(self)




    def para_decl(self):

        localctx = BKITParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_para_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(BKITParser.ID)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 121
                self.match(BKITParser.LSB)
                self.state = 122
                self.match(BKITParser.INTEGER_LITERAL)
                self.state = 123
                self.match(BKITParser.RSB)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def stmtList(self):
            return self.getTypedRuleContext(BKITParser.StmtListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def para_decllist(self):
            return self.getTypedRuleContext(BKITParser.Para_decllistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BKITParser.FUNCTION)
            self.state = 130
            self.match(BKITParser.COLON)
            self.state = 131
            self.match(BKITParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 132
                self.match(BKITParser.PARAMETER)
                self.state = 133
                self.match(BKITParser.COLON)
                self.state = 134
                self.para_decllist()


            self.state = 137
            self.match(BKITParser.BODY)
            self.state = 138
            self.match(BKITParser.COLON)
            self.state = 139
            self.stmtList()
            self.state = 140
            self.match(BKITParser.ENDBODY)
            self.state = 141
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Global_vardeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.Global_vardeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmtContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_stmtList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtList" ):
                return visitor.visitStmtList(self)
            else:
                return visitor.visitChildren(self)




    def stmtList(self):

        localctx = BKITParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 143
                self.global_vardecl()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 149
                    self.stmt() 
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(BKITParser.IfStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(BKITParser.AssignStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(BKITParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(BKITParser.ForStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(BKITParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(BKITParser.ContinueStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(BKITParser.ReturnStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(BKITParser.CallStmtContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(BKITParser.DoWhileStmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.ifStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.assignStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.whileStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 159
                self.breakStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 160
                self.continueStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 161
                self.returnStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 162
                self.callStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 163
                self.doWhileStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def exp1(self):
            return self.getTypedRuleContext(BKITParser.Exp1Context,0)


        def THEN(self):
            return self.getToken(BKITParser.THEN, 0)

        def stmtList(self):
            return self.getTypedRuleContext(BKITParser.StmtListContext,0)


        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def elifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ElifStmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.ElifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(BKITParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = BKITParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(BKITParser.IF)
            self.state = 167
            self.exp1()
            self.state = 168
            self.match(BKITParser.THEN)
            self.state = 169
            self.stmtList()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.ELSEIF:
                self.state = 170
                self.elifStmt()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ELSE:
                self.state = 176
                self.elseStmt()


            self.state = 179
            self.match(BKITParser.ENDIF)
            self.state = 180
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(BKITParser.ELSEIF, 0)

        def exp1(self):
            return self.getTypedRuleContext(BKITParser.Exp1Context,0)


        def THEN(self):
            return self.getToken(BKITParser.THEN, 0)

        def stmtList(self):
            return self.getTypedRuleContext(BKITParser.StmtListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_elifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElifStmt" ):
                return visitor.visitElifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elifStmt(self):

        localctx = BKITParser.ElifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(BKITParser.ELSEIF)
            self.state = 183
